--- a/src/app/pai/pai.component.html
+++ b/src/app/pai/pai.component.html
@@ -1,3 +1,12 @@
+<!--
+    Tassyo Platini de Souza Gonçalves - 01516372
+    Levi Souza Alves - 01529075
+    Pedro Manso Rodrigues - 01561666
+    Paulo César Cadena - 01563936
+    Vitor Passos do Rêgo - 01538874
+    Jordão Antonio de Moura - 01567032
+-->
+
 <article>
     <h1>Interpolação</h1>
     <p>{{ texto }}</p>
